<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:hint="@string/title"
        android:inputType="textCapSentences|textAutoCorrect"
        android:minHeight="48dp"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:inputType="textCapSentences|textAutoCorrect"
        android:hint="@string/details"
        android:textSize="20sp"
        android:background="@null" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_title"
        android:focusable="false"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:background="@null"
        android:textSize="20sp"
        android:textColor="#000000"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/rating_bar"
        android:numStars="5"
        android:stepSize="0.5"

        android:secondaryProgressTint="@color/ratingOrange"
        android:layout_margin="2dp"
        android:id="@+id/priority_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/product_categories"
            android:contentDescription="@string/spinner"
            android:minHeight="48dp"
            android:id="@+id/category_spinner"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:textSize="20sp"
            android:id="@+id/complete_checkbox" />
    </LinearLayout>

    <Button
        android:id="@+id/add_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/add" />

</LinearLayout>